Fixed: minor broken styles

--- a/client/src/styles/application.styl
+++ b/client/src/styles/application.styl
@@ -42,7 +42,7 @@ ul#task-list-done
             max-width 50%
 
         ul.sorts
-            right 30px
+            right 50px !important
 
     .container
         margin 0
